--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,18 @@ img {
 	width: 100%;
 	max-width: inherit;
 }
+
+/* https://github.com/sindresorhus/github-markdown-css#usage */
+.markdown-body {
+	box-sizing: border-box;
+	min-width: 200px;
+	max-width: 980px;
+	margin: 0 auto;
+	padding: 45px;
+}
+
+@media (max-width: 767px) {
+	.markdown-body {
+		padding: 15px;
+	}
+}
