--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ img {
 .editor-container {
 	padding-right: 4px;
 }
+.editor-container textarea {
+	resize: vertical;
 /* https://github.com/sindresorhus/github-markdown-css#usage */
 .markdown-body {
 	box-sizing: border-box;
