feat: style with mobile-first approach

--- a/src/App.css
+++ b/src/App.css
@@ -8,18 +8,22 @@ img {
 	display: flex;
 	flex-direction: column;
 }
-.container > * {
-	flex: auto;
+.container > div {
+	flex: 1;
 }
 
 .editor-container {
-	padding-right: 4px;
 }
 .editor-container textarea {
-	resize: vertical;
+	resize: none;
+	display: block;
 	width: 100%;
 }
 
+.preview-container {
+	max-height: 100vh;
+	overflow-y: scroll;
+}
 /* https://github.com/sindresorhus/github-markdown-css#usage */
 .markdown-body {
 	box-sizing: border-box;
