--- a/src/App.css
+++ b/src/App.css
@@ -30,19 +30,22 @@ img {
 	min-width: 200px;
 	max-width: 980px;
 	margin: 0 auto;
-	padding: 45px;
+}
+
 @media screen and (min-width: 640px) {
 	.editor-container textarea {
 		height: 100%;
+		border: none;
 	}
 
 	.container {
 		flex-direction: row;
+		gap: 1rem;
 	}
 }
 
 @media (max-width: 767px) {
 	.markdown-body {
-		padding: 15px;
+		padding: 1rem;
 	}
 }
