feat: hide `.toggle-expand-btn` on wider screens

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,9 @@ img {
 		height: 100%;
 		border: none;
 	}
+	.editor-container .toggle-expand-btn {
+		display: none;
+	}
 
 	.container {
 		flex-direction: row;
