--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0");
 
+*, *::before, *::after {
+	box-sizing: border-box;
+}
+
 img {
 	width: 100%;
 	max-width: inherit;
@@ -19,7 +23,7 @@ img {
 }
 .editor-container .toggle-expand-btn {
 	position: absolute;
-	right: .5rem;
+	right: 0;
 	top: .5rem;
 
 	border: none;
@@ -44,6 +48,9 @@ img {
 }
 
 @media screen and (min-width: 640px) {
+	.editor-container {
+		gap: 1rem;
+	}
 	.editor-container textarea {
 		height: 100%;
 		border: none;
