--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ img {
 	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
-	max-height: 100vh;
+	max-height: calc(100vh - 88px);
 }
 .container > div {
 	flex: 1;
