--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,13 @@ header h1 {
 	padding: 1rem;
 }
 
+@media screen and (min-width: 360px) {
+	.info {
+		display: inline-flex;
+		align-items: center;
+		gap: 8px;
+	}
+}
 @media screen and (min-width: 640px) {
 	.container {
 		flex-direction: row;
