--- a/src/App.css
+++ b/src/App.css
@@ -120,14 +120,15 @@ header h1 {
 	.editor-container textarea {
 		height: calc(100vh - 4px);
 		border: none;
+		height: calc(calc(100vh - 2px) - var(--HEADER_HEIGHT));
 	}
 	.editor-container .toggle-expand-btn {
 		display: none;
 	}
 
-	.container {
-		flex-direction: row;
-		gap: 1rem;
+	.preview-container {
+		padding-top: 1em;
+		height: calc(100vh - var(--HEADER_HEIGHT))
 	}
 
 	.markdown-body {
