--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@ header h1 {
 
 	border: none;
 	border-bottom: var(--BORDER_VALUES);
+	padding-left: 1em;
 
 	display: block;
 	width: 100%;
@@ -120,9 +121,10 @@ header h1 {
 		gap: 1rem;
 	}
 	.editor-container textarea {
-		height: calc(100vh - 4px);
-		border: none;
 		height: calc(calc(100vh - 2px) - var(--HEADER_HEIGHT));
+		border-bottom: unset;
+		border-right: var(--BORDER_VALUES);
+
 	}
 	.editor-container .toggle-expand-btn {
 		display: none;
